# gld-opedss-ochre-helics

./: .gitignore  README.md  pyproject.toml
cosimulation_tools/dss-ochre-helics/: DSSfederate.json  DSSfederate.py  analysis.py  federate1.json  federate1.py  rem.py  runner.json
cosimulation_tools/dss-ochre-helics/first_trial/: DSSfederate.py  README.md  federate1.py
cosimulation_tools/dss-ochre-helics/network_model/: ieeezipload.player  model_base.dss  model_busxy.dss  model_uuid.dss  storage.dss
cosimulation_tools/dss-ochre-helics/results/: main_results.csv  storage_info.csv  storage_powers_results.csv  storage_soc_results.csv  storage_summary.csv  voltage_results.csv
cosimulation_tools/dss-ochre-helics/testing_scripts/: t1.py  tmp.py  tmp2.py
cosimulation_tools/gld-helics/csv_profiles/: der_profile.csv  (+1 more)
datasets/: README.md
datasets/resstock_2025/: OCHRE_FIXES.md
resstock_2025/: learn_click.py  load_allocations_api.py  load_profiles.py  method1.txt  plots.py
resstock_2025/api_methods/: method1_50.csv
self-learning/: ngrok.py
transformer_layer/configs/: config.py  config.toml
transformer_layer/results/: run_2025-12-17_12-12-42_up00_method1.csv  run_2025-12-17_15-15-55_up00_method2_data.csv  run_2025-12-17_15-15-55_up00_method2_regression.csv  run_2025-12-17_18-35-46_up00_method3_kva_25.csv  run_2025-12-17_18-35-46_up00_method3_kva_50.csv  run_2025-12-17_18-35-46_up00_method3_kva_75.csv  run_2025-12-17_18-35-46_up00_method3_regression.csv
transformer_layer/scripts/: cached_building_ids.csv  load_allocations_api.py  load_profiles.py  plots.py
(+10453 files in other folders)
