[project]
name = "gld-opedss-ochre-helics"
version = "0.1.0"
description = "Quantized-DERMS Aggregation Framework"
authors = [
    {name = "MidrarAdham",email = "midrar@pdx.edu"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "click (>=8.3.1,<9.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=1.26,<2.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "helics[cli] (>=3.6.1,<4.0.0)",
    "ochre-nrel (==0.9.1)",
    "pathlib (>=1.0.1,<2.0.0)",
    "pycallgraph2 (>=1.1.3,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
